tests222/tests/test67.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: byte value 256 out of range
^
